--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "firebase": "^11.7.0",
+    "iron-session": "^8.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
