--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
-    "build": "prisma generate && next build",
+    "build": "rm -rf node_modules/.prisma/client && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
