--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@genkit-ai/firebase": "^1.2.2",
+    "@genkit-ai/googleai": "^1.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -38,6 +40,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "firebase": "^11.7.0",
+    "genkit": "^1.1.0",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
